--- a/grano-angus.html
+++ b/grano-angus.html
@@ -187,11 +187,12 @@
                                 <div id="tab-1-content" class="cont">
                                     <div class="row">
                                         <div class="col-md-10 offset-md-1 mb-40 text-center box-aprendiendo">
-                                            <img src="assets/img/m.png" alt="">
-                                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit. Neque ipsa qui dolorem quasi officia debitis animi obcaecati eaque
-                                                quod a, itaque pariatur voluptatem quidem autem at facilis deserunt
-                                                atque recusandae.</p>
+                                            <video class=" w-100" width="" height="" controls autoplay muted loop>
+                                                <source src="assets/img/video/video-trazabilidad.mp4" type="video/mp4">
+                                                <source src="video/video.ogg" type="video/ogg">
+                                                <source src="video/video.webm" type="video/webm">
+                                                Your browser does not support the video tag.
+                                            </video>
                                         </div>
                                     </div>
                                 </div>
