--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         <p class="text-justify">Creemos en la alimentación consciente, coherente y justa, Implementando procesos de bienestar animal, asegurándonos a través de la trazabilidad de cada uno de los animales que procesamos, hayan tenido las mejores prácticas ganaderas, para luego transformarlos en carnicería de detallada calidad, asegurándonos que nada se desperdicie, pero sobre todo asegurando la mejor carne para tu mesa.</p>
                         <p class="text-justify" style="color: #12b870;">“En Mafrox creemos que construir  relaciones con criadores, carniceros y nuestros clientes es la clave para crear experiencias de sabores memorables.”</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 d-flex align-items-center">
                         <div class="about-img mb-20">
-                            <div class="img"><img src="assets/img/bienvenido_mafrox.png" alt="img"></div>
+                            <div class="img"><img src="assets/img/MAFROX_FOTO_INICIO.jpg" alt="img"></div>
                         </div>
                     </div>
                 </div>
