--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         </div>
     </div>
     <!-- Content -->
+
+
     <div class="redboa-side-content">
         <!-- Slider -->
         <header id="home" class="header-video ">
@@ -266,7 +268,7 @@
                             <div class="clearfix"></div>
                             <!-- gallery -->
                             
-                            <div class="gallery text-center full-width">
+                            <div class="gallery text-center full-width scroll">
                                 <!-- Parrillero -->
                                 <div id="parrilleros" class="show"> 
                                 <div class="col-md-4 items parrillero">
