--- a/grano-angus.html
+++ b/grano-angus.html
@@ -19,6 +19,37 @@
 </head>
 
 <body>
+    <!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog" style="background-color: #212020c4;">
+    <div class="modal-dialog" >
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" style="color:#12b870">&times;</button>
+         <img src="assets/img/logo-mafrox-vector-(1)2.png" alt="" class="w-30 h-100 m-auto">
+        </div>
+        <div class="modal-body scroll">
+                <h5 class="modal-title text-center mb-1" style="color:#12b870;font-weight: 500;font-size: 1.8rem">INFORMATIVO DE CALIDAD 001-2020 MAFROX</h5>
+          <h6 class="text-center" style="color:#000">Respecto a la pandemia declarada por la OMS - COVID -19, MAFROX informa a nuestros clientes lo siguiente:</h6>
+          <ol class="custom-counter">
+              <li>A nuestro sistema de Gestión de Calidad e Inocuidad que está basado en los principios de Higiene del CODEX Alimentarius y el estándar HACCP hemos incorporado los protocolos y recomendaciones de la FAO/OMS y del MINSA para controlar los riesgos de contagio entre nuestros trabajadores.</li>
+              <li>En nuestro proceso permanente de análisis de riesgos está incorporada la posibilidad de contaminación de los alimentos con  agentes bacterianos, fungosos y virales. En virtud de este riesgo controlamos permanentemente la salud de nuestros trabajadores complementariamente a los protocolos de sanidad para ingreso a sala y el trabajo de procesamiento cárnico.</li>
+              <li>El Covid-19 no se considera una enfermedad que pueda transmitirse por alimentos, al igual que otras enfermedades virales respiratorias como el AH1N1 y la influenza tipo B. Es importante recalcar que nuestros productos empacados al vacío pasan por tanques de termo contracción con agua caliente a 84°C, lo cual complementa nuestro control de riesgos tomando en consideración que la supervivencia del virus a más de 30°C es casi nula.</li>
+              <li>Como parte de nuestro programa permanente de capacitaciones, que ya incluye los principios generales de higiene, hemos realizado capacitaciones específicas respecto al COVID-19, con incidencia en formas de prevención de contagio, reconocimiento de síntomas y protocolos a seguir en caso de sospecha de infección.</li>
+              <li>Nuestro sistema de limpieza y desinfección usa desde siempre productos como el gel con alcohol al 63% y dióxido de cloro a 100 ppm, desinfectantes que tiene eficacia comprobada para eliminar el coronavirus.</li>
+              <li>MAFROX ha incorporado un procedimiento de revisión diaria de todo el personal de planta con medición de temperatura y evaluación de síntomas característicos de esta enfermedad. Así mismo hemos suspendido los viajes de nuestro personal a Lima y la recepción de visitas en general.</li>
+              <li>Oxapampa es un pueblo pequeño y en esta época del año con muy pocas visitas de afuera. Al momento no tenemos casos reportados en nuestras zonas de acopio y procesamiento.</li>
+          </ol>
+          <h6 class="text-center" style="color:#000">Estamos permanentemente atentos a cualquier nueva información sobre el tema para mejorar nuestro aseguramiento. Nuestra finalidad, como siempre, es comercializar productos de muy buena calidad y sobre todo seguros para el consumidor.</h6>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default butn butn-bg" data-dismiss="modal" style="color:#fff"><span>Cerrar</span></button>
+        </div>
+      </div>
+  
+    </div>
+  </div>
+<!-- Modal -->
     <!-- Preloader -->
     <div id="preloader">
         <div class="loading-area">
@@ -1173,6 +1204,11 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/bootstrap.menu.js"></script>
     <script src="assets/js/scripts.js"></script>
+    <script>
+        $(function(){
+		    $("#myModal").modal();
+	    });
+    </script>
 </body>
 
 <!-- Mirrored from duruthemes.com/demo/html/redboa/onepage-dark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 18 Feb 2020 16:42:50 GMT -->
