--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h6 class="text-center" style="color:#000">Estamos permanentemente atentos a cualquier nueva información sobre el tema para mejorar nuestro aseguramiento. Nuestra finalidad, como siempre, es comercializar productos de muy buena calidad y sobre todo seguros para el consumidor.</h6>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default butn butn-bg" data-dismiss="modal" style="color:#fff">Cerrar</button>
+              <button type="button" class=" butn butn-bg" data-dismiss="modal" style="color:#fff">Cerrar</button>
             </div>
           </div>
       
