--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <button type="button" class="close" data-dismiss="modal" style="color:#12b870">&times;</button>
              <img src="assets/img/logo-mafrox-vector-(1)2.png" alt="" class="w-30 h-100 m-auto">
             </div>
-            <div class="modal-body">
+            <div class="modal-body p-4">
                     <h5 class="modal-title text-center mb-1" style="color:#12b870;font-weight: 500;font-size: 1.8rem">INFORMATIVO DE CALIDAD 001-2020 MAFROX</h5>
               <h6 class="text-justify" style="color:#000">Respecto a la pandemia declarada por la OMS-COVID-19, MAFROX informa a nuestros clientes lo siguiente:</h6>
               <ol class="custom-counter">
@@ -41,7 +41,7 @@
                   <li>Oxapampa es un pueblo pequeño y en esta época del año con muy pocas visitas de afuera. Al momento no tenemos casos reportados en nuestras zonas de acopio y procesamiento.</li>
               </ol>
               <h6 class="text-center" style="color:#000">Estamos permanentemente atentos a cualquier nueva información sobre el tema para mejorar nuestro aseguramiento. Nuestra finalidad, como siempre, es comercializar productos de muy buena calidad y sobre todo seguros para el consumidor.</h6>
-              <h6 class="text-center"style="color:#000">Línea de contacto calidad Mafrox: <span style="color:#12b870"> 997-926- 817</span></h6>
+              <h6 class="text-center"style="color:#000">Línea de contacto Calidad Mafrox <span style="color:#12b870"> 997-926- 817</span></h6>
             
             </div>
             <div class="modal-footer">
@@ -310,7 +310,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillero_6.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/ASADO DE TIRA SIN HUESO.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>ASADO DE TIRA SIN HUESO</h6>
@@ -327,7 +327,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillera_2.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/ASADO DE TIRA CON HUESO.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>EL ASADO DE TIRA DE SIEMPRE</h6>
@@ -344,7 +344,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillero_3.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/BIFE ANCHO.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>BIFE ANCHO</h6>
@@ -361,7 +361,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillero_6.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/BIFE ANGOSTO.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>BIFE ANGOSTO</h6>
@@ -378,7 +378,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillera_2.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/BIFE DE VACIO.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>EL BIFE DE VACIO</h6>
@@ -395,7 +395,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillero_3.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/ENTRAÑA FINA.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>LA ENTRAÑA FINA</h6>
@@ -412,7 +412,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillero_6.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/COLITA DE CUADRIL.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>LA COLITA DE CUADRIL</h6>
@@ -429,7 +429,7 @@
                                 <div class="col-md-4 items parrillero">
                                     <!-- <a href="assets/img/cortes/carne3.png" class="popimg"> -->
                                     <div class="item-img">
-                                        <img src="assets/img/cortes/parrillera_2.png" alt="image">
+                                        <img src="assets/img/cortes/parrillero/PICANHA.png" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width vertical-center">
                                                 <h6>LA PICANHA</h6>
