--- a/grano-angus.html
+++ b/grano-angus.html
@@ -28,7 +28,7 @@
               <button type="button" class="close" data-dismiss="modal" style="color:#12b870">&times;</button>
              <img src="assets/img/logo-mafrox-vector-(1)2.png" alt="" class="w-30 h-100 m-auto">
             </div>
-            <div class="modal-body">
+            <div class="modal-body p-4">
                     <h5 class="modal-title text-center mb-1" style="color:#12b870;font-weight: 500;font-size: 1.8rem">INFORMATIVO DE CALIDAD 001-2020 MAFROX</h5>
               <h6 class="text-justify" style="color:#000">Respecto a la pandemia declarada por la OMS-COVID-19, MAFROX informa a nuestros clientes lo siguiente:</h6>
               <ol class="custom-counter">
